--- a/ansible-weblogic12c/windows/roles/fmw-software/tasks/main.yml
+++ b/ansible-weblogic12c/windows/roles/fmw-software/tasks/main.yml
@@ -1,24 +1,27 @@
 # ==> Install Fussion Middleware Infrastructure Software
 - name: Create installer directory
-  file: 
+  win_file: 
     state: directory
     path: "{{ mw_installer_folder }}"
     owner: "{{ oracle_user }}"
     group: "{{ oracle_group }}"
 
 - name: Copy Weblogic installation distribution to remote
-  synchronize:
+  win_copy:
     src: "{{software_directory }}/{{ mw_installer }}"
-    dest: "{{ mw_installer_folder }}"
+    dest: "{{ software_directory }}"
 
 - name: Copy file for silent installation
-  template: src=silent-weblogic.txt dest={{ mw_installer_folder }}
+  win_template: src=silent.xml.j2 dest={{ mw_installer_folder }}/silent.xml
+
 - name: Copy OraInst.loc
-  template: src=oraInst.loc dest={{ mw_installer_folder }}
+  win_template: src=oraInst.loc dest={{ mw_installer_folder }}
+
 - name: execute Weblogic installer
-  command: "{{ jdk_folder }}/bin/java -Xms1024m -Xmx1024m -jar {{ mw_installer_folder }}/{{ mw_installer }} -silent -responseFile {{ mw_installer_folder }}/silent-weblogic.txt -invPtrLoc {{ mw_installer_folder }}/oraInst.loc"
-- name: Update 'JVM_ARGS' variable within wlst script
-  lineinfile:
-    dest: "{{ middleware_common_home }}/common/bin/wlst.sh"
-    regexp: '^JVM_ARGS='
-    line: JVM_ARGS="-Dprod.props.file='${WL_HOME}'/.product.properties ${WLST_PROPERTIES} ${JVM_D64} ${UTILS_MEM_ARGS} ${COMMON_JVM_ARGS} ${CONFIG_JVM_ARGS} -Djava.security.egd=file:///dev/urandom"
+  win_shell: "{{ software_directory }}/{{ mw_installer }} -mode=silent -silent_xml={{ oracle_base }}/installer/silent.xml -log={{ mw_installer_folder }}/Weblogic-installer.log"
+
+#####- name: Update 'JVM_ARGS' variable within wlst script
+#####  lineinfile:
+#####    dest: "{{ oracle_base }}/common/bin/wlst.cmd"
+#####    regexp: '^JVM_ARGS='
+#####    line: JVM_ARGS="-Dprod.props.file='${WL_HOME}'/.product.properties ${WLST_PROPERTIES} ${JVM_D64} ${UTILS_MEM_ARGS} ${COMMON_JVM_ARGS} ${CONFIG_JVM_ARGS} -Djava.security.egd=file:///dev/urandom"
