--- a/ansible-weblogic12c/windows/roles/node-manager/templates/nodemanager.properties
+++ b/ansible-weblogic12c/windows/roles/node-manager/templates/nodemanager.properties
@@ -1,12 +1,12 @@
 DomainsFile={{ nodemanager_home }}/nodemanager.domains
 LogLimit=0
-PropertiesVersion=12.2.1
+PropertiesVersion=10.3.6
 AuthenticationEnabled=true
 NodeManagerHome={{ nodemanager_home }}
 JavaHome={{ jdk_folder }}
 LogLevel=INFO
 DomainsFileEnabled=true
-StartScriptName=startWebLogic.sh
+StartScriptName=startWebLogic.cmd
 ListenAddress={{ node_manager_listen_address }}
 NativeVersionEnabled=true
 ListenPort={{ node_manager_listen_port }}
@@ -19,6 +19,7 @@ LogAppend=true
 StateCheckInterval=500
 CrashRecoveryEnabled=true
 StartScriptEnabled=true
-LogFile={{ nodemanager_home }}/nodemanager.log
+#LogFile={{ nodemanager_home }}/nodemanager.log
+LogFile={{ oracle_base }}/product/Oracle_Home/logs/nodemanager.log
 LogFormatter=weblogic.nodemanager.server.LogFormatter
 ListenBacklog=50
