--- a/ansible-weblogic12c/windows/ansible.cfg
+++ b/ansible-weblogic12c/windows/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 hostfile = hosts
-remote_user = vagrant
+remote_user = thohje
 ###private_key_file = .vagrant/machines/default/virtualbox/private_key
 host_key_checking = False
