--- a/ansible-weblogic12c/windows/roles/wls-start-nodemanager/tasks/main.yml
+++ b/ansible-weblogic12c/windows/roles/wls-start-nodemanager/tasks/main.yml
@@ -7,4 +7,4 @@
     - start-nodemanager
 
 - name: Waiting for nodemanager to come up
-  wait_for: port=5556 delay=5 timeout=90
+  wait_for: port={{ node_manager_listen_port }} delay=5 timeout=90
