--- a/ansible-weblogic12c/windows/wls-vars.yml
+++ b/ansible-weblogic12c/windows/wls-vars.yml
@@ -1,15 +1,15 @@
 # Common paths and names
-middleware_home: '{{ oracle_base }}\product\Oracle_Home'
-middleware_common_home: '{{ middleware_home }}\oracle_common'
-domains_home: '{{ oracle_base }}\config\Domains'
-applications_home: '{{ oracle_base }}\config\applications'
-mw_installer_folder: '{{ oracle_base }}\installer'
-domain_home: '{{ domains_home }}\{{ domain_name }}'
-nodemanager_home: '{{ domain_home }}\nodemanager'
-weblogic_home: '{{ middleware_home }}\wlserver'
+middleware_home: '{{ oracle_base }}/product/Oracle_Home'
+middleware_common_home: '{{ middleware_home }}/oracle_common'
+domains_home: '{{ oracle_base }}/config/Domains'
+applications_home: '{{ oracle_base }}/config/applications'
+mw_installer_folder: '{{ oracle_base }}/installer'
+domain_home: '{{ domains_home }}/{{ domain_name }}'
+nodemanager_home: '{{ domain_home }}/nodemanager'
+weblogic_home: '{{ middleware_home }}/wlserver'
 nodemanager_username: 'manager'
 weblogic_admin: 'weblogic'
 admin_server_name: 'AdminServer'
 server_hostname: '{{ ansible_fqdn }}'
 # Required for extension library
-domain_extension_home: c:\oracle\fmw12.2.1\product\Oracle_Home\wlserver\common\deployable-libraries
+domain_extension_home: c:/oracle/wls10.3.6/product/Oracle_Home/wlserver/common/deployable-libraries
