--- a/ansible-weblogic12c/windows/roles/wls-deploy-applications/tasks/main.yml
+++ b/ansible-weblogic12c/windows/roles/wls-deploy-applications/tasks/main.yml
@@ -1,9 +1,6 @@
  
 - name: create deploy_environment.py
-  sudo: true
-###  become_user: root
-###  become_user: "{{ oracle_user }}"
-  template:
+  win_template:
     src: roles/wls-deploy-applications/templates/deploy_environment_py_j2 
     dest: "{{ deploy_environment_py }}"
     owner: "{{ oracle_user }}"
@@ -12,12 +9,10 @@
   register: deploy_environment_py_created
 
 - name: create directory for extensions
-  sudo: true
-  file: path="{{ domain_extension_home }}" state=directory owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
+  win_file: path="{{ domain_extension_home }}" state=directory owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
 
 - name: copy extensions
-  sudo: true
-  copy:
+  win_copy:
     src=roles/common/files/weblogic/lib/
     dest="{{ domain_extension_home }}"
     owner="{{ oracle_user }}"
@@ -25,12 +20,10 @@
   register: deployment_lib_copied
  
 - name: create directory for applications
-  sudo: true
-  file: path="{{ domain_application_home }}" state=directory owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
+  win_file: path="{{ domain_application_home }}" state=directory owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
  
 - name: copy deployment artifacts
-  sudo: true
-  copy:
+  win_copy:
     src=roles/common/files/weblogic/deploy/
     dest="{{ domain_application_home }}"
     owner="{{ oracle_user }}"
@@ -54,7 +47,6 @@
     msg: "Value of deploy_action is {{ deploy_action }}"
  
 - name: (un)deploy applications
-  sudo: true
   win_shell: "{{ oracle_base }}/common/bin/wlst.cmd -loadProperties {{ environment_properties }} {{ deploy_environment_py }}"
   when: deploy_environment_py_created.changed or deployment_artifacts_copied.changed
 
