Dom här borde jag not också gjort commit av innan jag gjorde merge av pull-request

--- a/ansible-weblogic12c/windows/infra-vars.yml
+++ b/ansible-weblogic12c/windows/infra-vars.yml
@@ -21,9 +21,13 @@ node_manager_listen_port: '15556'
 #node_manager_listen_address: 'localhost'
 node_manager_listen_address: '192.168.108.110'
 #admin_server_hostname: 'localhost'
-admin_server_hostname: 'NORR-THOHJE'
+###admin_server_hostname: 'NORR-THOHJE.knowit.local'
+admin_server_hostname: '192.168.108.110'
+###managed_server_hostname: 'NORR-THOHJE.knowit.local'
+managed_server_hostname: '192.168.108.110'
 admin_server_port: '17001'
 admin_server_port_ssl: '17002'
+admin_server_ip_address: '192.168.108.110'
 managed_server_name: 'managed_1'
 managed_server_port: '18001'
 #
