Ändrat namnen på en del roller ...

--- a/ansible-weblogic12c/windows/weblogic-fmw-domain.yml
+++ b/ansible-weblogic12c/windows/weblogic-fmw-domain.yml
@@ -13,10 +13,10 @@
     - role: windows-wls
     - role: windows-jdk
     - role: fmw-software
-    - role: fmw-domain
-    - role: node-manager
+    - role: create-domain
+    - role: setup-nodemanager
     - role: start-admin-server
-    - role: fmw-managed-server
+    - role: create-managed-server
     - role: start-managed-server
 
 #####  pre_tasks:
