Bytt namn på fmw-software till wls-software för att ha ett tydligare namn

--- a/ansible-weblogic12c/windows/weblogic-fmw-domain.yml
+++ b/ansible-weblogic12c/windows/weblogic-fmw-domain.yml
@@ -12,7 +12,7 @@
   roles:
     - role: windows-wls
     - role: windows-jdk
-    - role: fmw-software
+    - role: wls-software
     - role: create-domain
     - role: setup-nodemanager
     - role: start-admin-server
