--- a/ansible-weblogic12c/linux/roles/linux-wls/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/linux-wls/tasks/main.yml
@@ -43,3 +43,9 @@
 
 - name: Create Applications Home directory
   file: state=directory path={{ applications_home }} owner={{ oracle_user }} group={{ oracle_group }}
+
+- name: Create Software directory
+  file: state=directory path={{ software_directory }} owner={{ oracle_user }} group={{ oracle_group }}
+
+- name: Create logdirectory required when starting nodemanager.
+  file: state=directory path={{ oracle_base }}/config/Domains/{{ domain_name }}/servers/{{ admin_server_name }}/logs owner={{ oracle_user }} group={{ oracle_group }}
