--- a/ansible-weblogic12c/linux/roles/setup-nodemanager/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/setup-nodemanager/tasks/main.yml
@@ -10,15 +10,18 @@
   template: src=nodemanager.service dest=/etc/systemd/system/ mode=0664
   tags:
     - start-nodemanager
+
 - name: Enable nodemanager as linux service
   command: 'systemctl enable nodemanager'
   tags:
     - start-nodemanager
+
 - name: Start Node Manager
   command: 'systemctl start nodemanager'
   tags:
     - start-nodemanager
+
 - name: Waiting for nodemanager to come up
-  wait_for: port=5556 delay=5 timeout=90
+  wait_for: port={{ node_manager_listen_port }} delay=5 timeout=150
   tags:
     - start-nodemanager
