Verkar inte som det går att göra systemctl stop nodemanager följt av systemctl start nodemanager och får igång WLS

--- a/ansible-weblogic12c/linux/roles/create-managed-server/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/create-managed-server/tasks/main.yml
@@ -30,3 +30,4 @@
   poll: 0
 - name: Wait for Managed Server to startup 
   wait_for: host={{ server_hostname }} port={{ managed_server_port }} delay=5 timeout=90
+  register: ManagedServerStarted
