--- a/ansible-weblogic12c/linux/roles/node-manager/templates/nodemanager.properties
+++ b/ansible-weblogic12c/linux/roles/node-manager/templates/nodemanager.properties
@@ -7,9 +7,9 @@ JavaHome={{ jdk_folder }}
 LogLevel=INFO
 DomainsFileEnabled=true
 StartScriptName=startWebLogic.sh
-ListenAddress={{ node_manager_listen_address }}
+ListenAddress={{ node_manager_address }}
 NativeVersionEnabled=true
-ListenPort={{ node_manager_listen_port }}
+ListenPort={{ node_manager_port }}
 LogToStderr=true
 SecureListener=true
 LogCount=1
