En massa fixar, dom viktigaste som KAN göra att allt går att få igång nu och att det sedan funkar att göra stop och start via systemctl är att jag har lagt in WLS_USER, WLS_PW där det skall behövas. Dessutom har jag korrigerat ADMIN_URL i dom filer där det har varit fel värden. (#6)

--- a/ansible-weblogic12c/linux/roles/setup-nodemanager/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/setup-nodemanager/tasks/main.yml
@@ -22,6 +22,6 @@
     - start-nodemanager
 
 - name: Waiting for nodemanager to come up
-  wait_for: port={{ node_manager_listen_port }} delay=5 timeout=150
+  wait_for: port={{ node_manager_port }} host={{ node_manager_address }} delay=5 timeout=90
   tags:
     - start-nodemanager
