--- a/ansible-weblogic12c/linux/weblogic-install.yml
+++ b/ansible-weblogic12c/linux/weblogic-install.yml
@@ -10,17 +10,17 @@
     # Infrastructure passwords
     - secrets.yml
   roles:
-    - role: linux-wls
-    - role: linux-jdk
-    - role: wls-software
-      sudo_user: '{{ oracle_user }}'
+#####    - role: linux-wls
+#####    - role: linux-jdk
+#####    - role: wls-software
+#####      sudo_user: '{{ oracle_user }}'
     - role: create-domain
       sudo_user: '{{ oracle_user }}'
-    - role: setup-nodemanager
-    - role: start-admin-server
-      sudo_user: '{{ oracle_user }}'
-    - role: create-managed-server
-      sudo_user: '{{ oracle_user }}'
+#####    - role: setup-nodemanager
+#####    - role: start-admin-server
+#####      sudo_user: '{{ oracle_user }}'
+#####    - role: create-managed-server
+#####      sudo_user: '{{ oracle_user }}'
   pre_tasks:
     # ==> Fix hosts file. Remove hostname from local loop. A workaround for
     # remove hostname to local loop
