--- a/ansible-weblogic12c/linux/roles/create-managed-server/tasks/main.yml
+++ b/ansible-weblogic12c/linux/roles/create-managed-server/tasks/main.yml
@@ -1,17 +1,20 @@
-###### ==> Copy library extensions 
-#####- name: copy library extensions
-#####  sudo: true
-#####  copy:
-#####    src="roles/common/files/weblogic/lib/"
-#####    dest="{{ domain_extension_home }}"
-#####    owner="{{ oracle_user }}"
-#####    group="{{ oracle_group }}"
-#####  register: extension_lib_copied
-#####
+# ==> Copy library extensions 
+- name: copy library extensions
+  sudo: true
+  copy:
+    src="roles/common/files/weblogic/lib/"
+    dest="{{ domain_extension_home }}"
+    owner="{{ oracle_user }}"
+    group="{{ oracle_group }}"
+  register: extension_lib_copied
+
 # ==> Create managed server on Domain
 
 - name: Copy create managed server script
   template: src=create-managed.py dest={{ mw_installer_folder }}
+
+- name: Copy create GenBootStartupProps server script
+  template: src=create-genboot.py.j2 dest={{ mw_installer_folder }}/create-genboot.py
 
 - name: Execute create managed server script
   shell: '{{middleware_common_home }}/common/bin/wlst.sh {{ mw_installer_folder }}/create-managed.py'
@@ -31,5 +34,15 @@
   async: 1000
   poll: 0
 
+
+- name: Start Managed Server from script
+  shell: "nohup {{ oracle_base }}/config/Domains/{{ domain_name }}/bin/startManagedWebLogic.sh &"
+  async: 1000
+  poll: 0
+
 - name: Wait for Managed Server to startup 
   wait_for: host={{ managed_server_hostname }} port={{ managed_server_port }} delay=5 timeout=90
+
+- name: Execute create GenBootStartupProps script
+  shell: '{{middleware_common_home }}/common/bin/wlst.sh {{ mw_installer_folder }}/create-genboot.py'
+    
